# electronics_model

./: .env  Readme.MD  env_example  pyproject.toml
config/: settings.py  urls.py
electronics/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
electronics/migrations/: 0001_initial.py  0002_remove_networknode_supplier_and_more.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py
